--- a/env.env
+++ b/env.env
@@ -1,2 +1,3 @@
+DISCORD_TOKEN=""
 MAINTENANCE_MODE=false
 MAINTENANCE_MESSAGE="Le bot est actuellement en maintenance. Veuillez réessayer ultérieurement."
